# using_g2o

./: README.md
extraLib/g2o/: how_to_use.txt
extraLib/g2o/g2o/solvers/csparse/: .csparse_extension.cpp.swp
src/using_g2o/: CMakeLists.txt  create_OA.h  create_optimizer.cpp  create_optimizer.h  using_optimizer.cpp
testOh/: What_Made.txt
testOh/exercise1/: CMakeLists.txt  exercise1.cpp
testOh/exercise1/igdata/: after_opt.g2o  before_opt.g2o
testOh/exercise2/: CMakeLists.txt  exercise2.cpp
testOh/exercise2/data/: after_manhattanOlson3500.g2o
testOh/exercise3/: CMakeLists.txt
testOh/exercise3/data/: after_after_manhattanOlson3500.g2o
testOh/exercise3/using_g2o/: CMakeLists.txt  create_BS.cpp  create_BS.h  create_LS.cpp  create_OA.cpp  using_optimizer.cpp  using_optimizer.h
testOh/exercise4/: .exercise3.cpp.swp  CMakeLists.txt
testOh/exercise5/: CMakeLists.txt  exercise5.cpp  how_to_use.txt
testOh/exercise5/using_g2o/: CMakeLists.txt  create_LS.h
testOh/exercise6/: CMakeLists.txt  before_delete_comment.txt  exercise6.cpp  how_to_use.txt
